--- a/src/components/Typing/Typing.less
+++ b/src/components/Typing/Typing.less
@@ -11,7 +11,15 @@
     pre {
         line-height: 25px;
         padding: 20px 0px;
-        color: invert(100%);
+        // color: invert(100%);
+        // color: #fff;
+        // color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);;
+        background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+        // background-image:-webkit-linear-gradient(bottom,red,#fd8403,yellow); 
+
+        -webkit-background-clip:text; 
+    
+        -webkit-text-fill-color:transparent; 
     }
 }
 @keyframes typing {
