--- a/src/components/topNav/TopNav.less
+++ b/src/components/topNav/TopNav.less
@@ -2,8 +2,8 @@
     width: 100vw;
     height: 50px;
     background-color: #ff6700;
-    border-bottom: 1px solid #000;
-    background-color: #000;
+    // border-bottom: 1px solid #000;
+    background-color: #fff;
     position: sticky;
     top: 0px;
     img {
