feat: 增加逻辑线组件

--- a/src/components/Typing/Typing.less
+++ b/src/components/Typing/Typing.less
@@ -1,25 +1,19 @@
 .ui-typing-box {
     width: 100%;
     font-size: 16px;
+    // border: 1px solid blue;
     pre:after {
         content: '｜';
         animation: typing 1000ms infinite;
         font-weight: 700;
         margin-left: 1px;
         font-size: 1em;
+        color: #fff;
     }
     pre {
         line-height: 25px;
-        padding: 20px 0px;
         // color: invert(100%);
-        // color: #fff;
-        // color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);;
-        background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
-        // background-image:-webkit-linear-gradient(bottom,red,#fd8403,yellow); 
-
-        -webkit-background-clip:text; 
-    
-        -webkit-text-fill-color:transparent; 
+        color: #fff; 
     }
 }
 @keyframes typing {
