feat: 增加dashboard组件及相应动画

--- a/src/components/ContentTitle/ContentTitle.less
+++ b/src/components/ContentTitle/ContentTitle.less
@@ -1,13 +1,14 @@
-.content-title {
-    width: 65%;
-    font-size: 64px;
-    font-weight: 700;
-    padding: 70px 20px 20px 50px;
-    line-height: 68px;
-    color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);;
-    background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
-    -webkit-background-clip:text; 
-    -webkit-text-fill-color:transparent;
-    font-family: "Alliance1","Alliance1HeaderFallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    font-feature-settings: unset;
+.content-title-box {
+    .content-title {
+        width: 65%;
+        font-size: 64px;
+        font-weight: 700;
+        padding: 70px 20px 20px 50px;
+        line-height: 68px;
+        color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);;
+        background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+        -webkit-background-clip:text; 
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;
+    }
 }
