--- a/src/components/Line/Line.less
+++ b/src/components/Line/Line.less
@@ -22,4 +22,11 @@
         height: calc(100% - 20px - 12px);
         background-color: #45526b;
     }
+    .inview {
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+    }
 }
