--- a/src/components/Typing/Typing.less
+++ b/src/components/Typing/Typing.less
@@ -8,12 +8,11 @@
         font-weight: 700;
         margin-left: 1px;
         font-size: 1em;
-        color: #fff;
+        color: invert(100%);
     }
     pre {
         line-height: 25px;
-        // color: invert(100%);
-        color: #fff; 
+        color: invert(100%);
     }
 }
 @keyframes typing {
