--- a/src/components/topNav/TopNav.less
+++ b/src/components/topNav/TopNav.less
@@ -5,6 +5,7 @@
     // border-bottom: 1px solid #000;
     background-color: #fff;
     position: sticky;
+    z-index: 9999;
     top: 0px;
     img {
         height: 45px;
