--- a/src/components/Context/Context.less
+++ b/src/components/Context/Context.less
@@ -5,6 +5,9 @@
     font-weight: 700;
     line-height: 40px;
     font-family: "Alliance1","Alliance1Fallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    padding-bottom: 5vh;
+    position: relative;
+    z-index: 10;
     b {
         color: #fff;
         font-weight: 400;
