--- a/src/pages/index.global.less
+++ b/src/pages/index.global.less
@@ -1,5 +1,8 @@
 body {
     background-color: #060d20;
+    font-family: "Alliance1","Alliance1HeaderFallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    overflow-x: hidden;
+    height: 100000px;
 }
 
 * {
@@ -9,4 +12,26 @@ body {
 
 .content-box {
     padding: 0px 10.5vw;
+}
+
+.alert-enter {
+    opacity: 0;
+    transform: translateY(-10%);
+}
+.alert-enter-active {
+    transform: translateY(0%);
+    opacity: 1;
+    transition: opacity 1000ms, transform 1000ms;
+}
+
+.alert-exit{
+    opacity: 1;
+    transform: translateY(0%);
+}
+.alert-exit-active{
+    opacity: 0;
+    transform: translateY(10%);
+}
+.alert-exit-active{
+    transition: opacity 1000ms, transform 1000ms;
 }
