feat: 增加下载组件

--- a/src/components/topNav/TopNav.less
+++ b/src/components/topNav/TopNav.less
@@ -7,7 +7,23 @@
     position: sticky;
     z-index: 9999;
     top: 0px;
+    display: flex;
+    justify-content: space-between;
     img {
         height: 45px;
+    }
+    a {
+        text-decoration: none;
+        display: block;
+        width: 100px;
+        height: 35px;
+        line-height: 35px;
+        font-size: 14px;
+        color: #fff;
+        text-align: center;
+        margin-right: 3%;
+        margin-top: 10px;
+        background-color: #56a55a;
+        border-radius: 5px;
     }
 }
