--- a/src/components/topNav/TopNav.less
+++ b/src/components/topNav/TopNav.less
@@ -27,3 +27,21 @@
         border-radius: 5px;
     }
 }
+
+.top-nav-lng {
+    height: 10px;
+    padding: 10px 15px;
+    border: 1px solid #606266;
+    border-radius: 20px;
+    font-size: 13px;
+    line-height: 10px;
+    text-align: center;
+    margin-right: 40px;
+    margin-top: 10px;
+    cursor: pointer;
+    transition: all 0.3s;
+    user-select: none;
+    &:hover{
+        background-color: #dddddd;
+    }
+}
