fix: 恢复全局滚动条

--- a/src/components/ContentTitle/ContentTitle.less
+++ b/src/components/ContentTitle/ContentTitle.less
@@ -5,7 +5,7 @@
         font-weight: 700;
         padding: 70px 20px 20px 50px;
         line-height: 68px;
-        color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);;
+        // color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
         background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
         -webkit-background-clip:text; 
         -webkit-text-fill-color:transparent;
