--- a/src/pages/index.global.less
+++ b/src/pages/index.global.less
@@ -33,3 +33,7 @@ body {
     transform: translateY(10%);
     transition: opacity 1000ms, transform 1000ms;
 }
+
+// body::-webkit-scrollbar {
+//     display: none;
+// }
