feat: 鼠标样式调整

--- a/src/components/ContentTitle/ContentTitle.less
+++ b/src/components/ContentTitle/ContentTitle.less
@@ -7,8 +7,15 @@
         line-height: 68px;
         // color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
         background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
-        -webkit-background-clip:text; 
+        -webkit-background-clip:text;
         -webkit-text-fill-color:transparent;
         font-feature-settings: unset;
+        transition: all 0.3s;
     }
+    // .content-title:hover {
+    //     background: -webkit-linear-gradient(-70deg, #db469f 0%, #2188ff 100%);
+    //     -webkit-background-clip:text;
+    //     -webkit-text-fill-color:transparent;
+    //     font-feature-settings: unset;
+    // }
 }
