--- a/src/components/Context/Context.less
+++ b/src/components/Context/Context.less
@@ -13,6 +13,7 @@
         font-weight: 400;
     }
     a {
+        cursor: none;
         text-decoration: none;
         color: #8492af;
         border-bottom: 2px solid #8492af;
