--- a/src/pages/index.global.less
+++ b/src/pages/index.global.less
@@ -2,6 +2,22 @@ body {
     background-color: #060d20;
     font-family: "Alliance1","Alliance1HeaderFallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     overflow-x: hidden;
+    cursor: none;
+}
+
+.mouse-box {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 110px;
+    height: 40px;
+    z-index: 99999;
+    transform: translateY(-50%) translateX(-50%);
+    pointer-events:none;
+    img{
+        width: 100%;
+        height: 100%;
+    }
 }
 
 * {
