--- a/src/components/Line/Line.less
+++ b/src/components/Line/Line.less
@@ -12,7 +12,7 @@
     &::before {
         width: 8px;
         height: 8px;
-        border: 2px solid #45526b;
+        border: 2px solid rgba(218, 222, 231,.3);
         border-radius: 50%;
     }
     &::after {
@@ -20,13 +20,14 @@
         left: 5px;
         width: 2px;
         height: calc(100% - 20px - 12px);
-        background-color: #45526b;
+        background-color: rgba(218, 222, 231, .3);
     }
     .inview {
         width: 10px;
         height: 10px;
         position: absolute;
         top: 10px;
+        background-color: pink;
         left: 10px;
     }
 }
