--- a/src/components/ContentTitle/ContentTitle.less
+++ b/src/components/ContentTitle/ContentTitle.less
@@ -1,21 +1,45 @@
 .content-title-box {
     .content-title {
-        width: 65%;
         font-size: 64px;
         font-weight: 700;
-        padding: 70px 20px 20px 50px;
-        line-height: 68px;
-        // color: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+        // padding: 70px 20px 20px 50px;
+        // line-height: 68px;
+        transition: all 0.3s;
+    }
+    .blue {
         background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
         -webkit-background-clip:text;
         -webkit-text-fill-color:transparent;
         font-feature-settings: unset;
-        transition: all 0.3s;
     }
-    // .content-title:hover {
-    //     background: -webkit-linear-gradient(-70deg, #db469f 0%, #2188ff 100%);
-    //     -webkit-background-clip:text;
-    //     -webkit-text-fill-color:transparent;
-    //     font-feature-settings: unset;
-    // }
+    .red {
+        background: -webkit-linear-gradient(-70deg, #db469f 0%, #2188ff 100%);
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;
+    }
+    .white {
+        background: #fff;
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;    
+    }
+    .gray {
+        background: #8492af;
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;    
+    }
+    .purple {
+        background: -webkit-linear-gradient(300deg, #93f5ec 20%, #a77bf3 70%);;
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;    
+    }
+    .origin{
+        background: -webkit-linear-gradient(-70deg, #ff7170 0%, #ffe57f 100%);
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;
+    }
 }
