--- a/src/components/Dashboard/Dashboard.less
+++ b/src/components/Dashboard/Dashboard.less
@@ -1,13 +1,11 @@
 .dashboard-box {
     width: 100%;
-    // height: 100vh;
-    height: 55vw;
-
-    // background-color: pink;
+    height: 55rem;
+    padding-bottom: 25px;
     position: relative;
     .dashboard-bgc {
         position: absolute;
-        top: -25vh;
+        top: -12vw;
         left: -15vw;
         z-index: 0;
     }
@@ -16,7 +14,7 @@
         width: 80vw;
         height: 52vw;
         overflow: hidden;
-        top: 2vh;
+        top: 2vw;
         border-radius: 10px;
         .written-dashboard {
             position: absolute;
