--- a/src/components/topNav/TopNav.less
+++ b/src/components/topNav/TopNav.less
@@ -9,6 +9,7 @@
     top: 0px;
     display: flex;
     justify-content: space-between;
+    box-shadow:  0 3px 6px rgba(140,149,159,0.15), 0 1px 1px rgba(0,0,0,.1);
     img {
         height: 45px;
     }
@@ -40,6 +41,7 @@
     margin-top: 10px;
     transition: all 0.3s;
     user-select: none;
+    cursor: pointer;
     &:hover{
         background-color: #dddddd;
     }
