fix: download布局调整、文案信息替换

--- a/src/components/ContentTitle/ContentTitle.less
+++ b/src/components/ContentTitle/ContentTitle.less
@@ -25,19 +25,25 @@
         font-feature-settings: unset;    
     }
     .gray {
-        background: #8492af;
+        background: #b8babf;
         -webkit-background-clip:text;
         -webkit-text-fill-color:transparent;
         font-feature-settings: unset;    
     }
     .purple {
-        background: -webkit-linear-gradient(300deg, #93f5ec 20%, #a77bf3 70%);;
+        background: -webkit-linear-gradient(200deg, #93f5ec 20%, #a77bf3 70%);;
         -webkit-background-clip:text;
         -webkit-text-fill-color:transparent;
         font-feature-settings: unset;    
     }
     .origin{
         background: -webkit-linear-gradient(-70deg, #ff7170 0%, #ffe57f 100%);
+        -webkit-background-clip:text;
+        -webkit-text-fill-color:transparent;
+        font-feature-settings: unset;
+    }
+    .black{
+        background: #000;
         -webkit-background-clip:text;
         -webkit-text-fill-color:transparent;
         font-feature-settings: unset;
