--- a/src/pages/index.global.less
+++ b/src/pages/index.global.less
@@ -1,8 +1,20 @@
 body {
-    // background-color: #060d20;
+    background-color: #e1e1e1;
     font-family: "Alliance1","Alliance1HeaderFallback",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     overflow-x: hidden;
-    // cursor: none;
+    background-image: url('../images/bg.png');
+    background-size: 150px;
+    user-select: none;
+}
+
+.global-black{
+    background-color: #060d20;
+    transition: all 0.3s;
+}
+
+.global-writh {
+    background-color: transparent;
+    transition: all 0.3s;
 }
 
 // .mouse-box {
@@ -31,14 +43,14 @@ body {
 }
 
 .content-box {
-    background-color: #060d20;
+    // background-color: #060d20;
     .context-title-box {
         padding: 70px 20px 20px 50px;
     }
 }
-.download-box {
-    background-color: #fff;
-}
+// .download-box {
+//     background-color: #fff;
+// }
 
 // body::-webkit-scrollbar {
 //     display: none;
