--- a/src/components/CSSTransitionMiddle/CSSTransitionMiddle.less
+++ b/src/components/CSSTransitionMiddle/CSSTransitionMiddle.less
@@ -21,6 +21,28 @@
     transition: opacity 1000ms, transform 1000ms;
 }
 
+.alert-slow-enter {
+    opacity: 0;
+    transform: translateY(-150%);
+}
+
+.alert-slow-enter-active {
+    transform: translateY(0%);
+    opacity: 1;
+    transition: opacity 2000ms, transform 2000ms;
+}
+
+.alert-slow-exit {
+    opacity: 1;
+    transform: translateY(0%);
+}
+
+.alert-slow-exit-active{
+    opacity: 0;
+    transform: translateY(20%);
+    transition: opacity 2000ms, transform 2000ms;
+}
+
 // 左右开弓
 .from-left-enter {
     transform: translateX(-10%);
@@ -45,7 +67,7 @@
 }
 
 .from-right-enter {
-    transform: translateX(10%);
+    transform: translateX(20%);
     opacity: 0;
 }
 
