--- a/src/components/Download/Download.less
+++ b/src/components/Download/Download.less
@@ -1,33 +1,17 @@
 .download{
-    width: 100%;
-    height: 55rem;
-    .title {
-        width: 100%;
-        padding: 5vw 0px;
-        .title-explain {
-            width: 50%;
-        }
-    }
+    width: 120%;
+    height: 20rem;
+    padding-top: 8rem;
+    margin-left: -15%;
     .download-item {
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        .left {
-            width: 45%;
-            height: 200px;
-            margin-left: 5%;
-            img {
-                width: 70%;
-                margin-left: 50%;
-                transform: translateX(-50%);
-            }
-        }
-        .right{
-            margin-bottom: 8vw;
-            width: 40%;
-            padding-left: 10%;
-            padding-top: 1vw;
+        .download-m1,
+        .download-inter {
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            align-items: center;
             line-height: 50px;
             a{
                 font-size: 30px;
@@ -36,12 +20,27 @@
                 text-decoration: none;
                 border-bottom: 3px solid #000;
                 display: inline-block;
-                height: 45px;
+                height: 40px;
                 transition: all 0.3s;
             }
             a:hover {
                 opacity: 0.5;
             }
+            .img {
+                width: 40%;
+                img {
+                    width: 70%;
+                    margin-left: 50%;
+                    transform: translateX(-30%);
+                }
+            }
+            .context {
+                transform: translateY(-20%);
+                width: 40%;
+            }
+        }
+        .download-inter {
+            margin-top: 8rem;
         }
     }
 }
